# deriv-calc

./: .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  bazel-bin  bazel-deriv-calc  bazel-out  bazel-testlogs  build.sh  cifuzz.yaml  main.cpp  my_fuzz_test_1.cpp  name.sh
.github/workflows/: main.yml
src/: BUILD.bazel  binary_tree.cpp  binary_tree.h  differentiation.cpp  differentiation.h  expression_loader.cpp  expression_loader.h  expression_simplifier.cpp  expression_simplifier.h  expression_tree.cpp  expression_tree.h  funnyentific_paper.cpp  funnyentific_paper.h  main.cpp  math_syntax.cpp  math_syntax.h  taylor_expansion.cpp  taylor_expansion.h  utilib.h
test/: BUILD.bazel  test.cpp
