load("@rules_fuzzing//fuzzing:cc_defs.bzl", "cc_fuzz_test")

cc_fuzz_test(
    name = "my_fuzz_test_1",
    srcs = ["my_fuzz_test_1.cpp"],
    corpus = glob(
        ["my_fuzz_test_1_inputs/**"],
        allow_empty = True,
    ) + select({
        "@cifuzz//:collect_coverage": glob([".my_fuzz_test_1_cifuzz_corpus/**"], allow_empty = True),
        "//conditions:default": [],
    }),
    deps = ["@cifuzz"],
)
